lib/tests/fixtures/compiler/parser/next_in_resource_override.baseline
Error: next_in_resource_override.pp:3:26: next statement cannot be used inside a resource override expression.
  bar => if true { next }
                   ^~~~
