lib/tests/fixtures/compiler/parser/next_in_resource_override.pp
[].each |$x| {
    File[foo] {
        bar => if true { next }
    }
}
